<resources>
    <string name="app_name">Smart Access</string>
    <string name="Title_Text">Smart Access</string>
    <string name="button_register">Register</string>
    <string name="button_login">Login</string>
    <string name="input_email">Enter Email</string>
    <string name="input_password">Enter password</string>
    <string name="link_forgotpw">Forgot Password</string>
    <string name="input_confirmpw">Confirm Password</string>
    <string name="input_fname">Enter First Name</string>
    <string name="input_lname">Enter Last Name</string>
    <string name="personal_text">Personal Information</string>
    <string name="password_text">Create Password</string>
    <string name="title_activity_consumer_mode">ConsumerModeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="Greeting">Hello</string>
    <string name="Name">Name</string>
    <string name="Total_Points">4,201,337</string>
    <string name="Points_Text">Loyalty Points</string>
    <string name="Booking_Nav">Book</string>
    <string name="Reservations_Nav">Reservations</string>
    <string name="Rooms_Nav">Rooms</string>
    <string name="Account_Nav">Account</string>
    <string name="Kiosk_Welcome">Enter Reservation Number</string>
    <string name="Room1">Room 322</string>
    <string name="Room2">Room 455</string>
    <string name="Lock_Message">Hold Phone Near Door Lock to Unlock it</string>
    <string name="Submit_Button">Submit</string>
    <string name="Verification_Text">Verification</string>
    <string name="Verification_Hint">Enter code sent to email</string>
    <string name="Kiosk_Success">Successfully Checked-In, Hold Phone Near Screen to Receive Virtual Room Key</string>
    <string name="EventID">EventID</string>
    <string name="TimeStamp">Timestamp</string>
    <string name="Action">Action</string>
    <string name="Result">Result</string>
    <string name="Asset">Asset</string>
    <string name="Guest">Guest</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_admin_mode">AdminModeActivity</string>
    <string name="CheckIn_Options">Choose Room Access Method</string>
    <string name="CardAccess">Access Room Using Card</string>
    <string name="PhoneAccess">Access Room Using Phone</string>
    <string name="CardScan">Hover Card Over Screen to Receive Virtual Room Key</string>
</resources>
