<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="292dp"
        android:layout_height="57dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="24dp"
        android:fontFamily="sans-serif"
        android:hint="@string/Title_Text"
        android:textAlignment="center"
        android:textSize="36sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="180dp"
        android:layout_height="71dp"
        android:layout_marginStart="112dp"
        android:layout_marginTop="248dp"
        android:background="@color/colorPrimary"
        android:text="@string/button_register"
        android:onClick="registerButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/button2"
        android:layout_width="180dp"
        android:layout_height="71dp"
        android:layout_marginStart="112dp"
        android:layout_marginTop="20dp"
        android:background="@color/colorPrimary"
        android:text="@string/button_login"
        android:onClick="loginButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />
</android.support.constraint.ConstraintLayout>